responsive, navigator, footer
index.html
- nav responsive in mobile and regular screen
- join button changed
- added a bubble card with images
- main content change to inline
- footer
project.html
- fixed the main content
- navigator and footer
event.html
- navigator and footer
link.html
- navigator and footer

--- a/events.html
+++ b/events.html
@@ -1,55 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/dfc6ae3438.js" crossorigin="anonymous"></script>
-    <link href="/css/events.css" rel="stylesheet">
-    <link href="/css/shared.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/dfc6ae3438.js"
+      crossorigin="anonymous"
+    ></script>
+    <link href="/css/events.css" rel="stylesheet" />
+    <link href="/css/shared.css" rel="stylesheet" />
     <!--FONT AWESOME ICONS-->
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
+    <!-- ------ -->
     <title>Web Dev Club</title>
-</head>
-<body class="body">
-    <div class="header__wrapperWidth"> <!--Div only for the background color so it stretches full width-->
-        <header class="header">
-            <a href="/index.html"><img class="header__logo" src="/images/webdevclublogojusttext.svg" alt="Web Dev Club Logo"></a> <!--Link back to homepage-->
-            <nav class="nav">
-                <ul class="nav__ul">
-                    <li class="nav__li"><a class="nav__anchor" href="/projects.html">Projects</a></li>
-                    <li class="nav__li"><a class="nav__anchor active" href="/events.html">Events</a></li>
-                    <li class="nav__li"><a class="nav__anchor" href="/contact.html">Contact</a></li>
-                    <button class="nav__joinButton"><a class="nav__joinAnchor" href="https://uvu.campusgroups.com/WDC/club_signup" target="_blank"> JOIN</a></button>
-                </ul>
-            </nav>
-        </header>
-    </div>
-    <main class="main">
-        <div class="main__titleDiv"> <!--Same class as contacts and events page-->
-            <h1>Upcoming Events</h1>
+  </head>
+  <body class="body">
+    <div class="header__wrapperWidth">
+      <!--Div only for the background color so it stretches full width-->
+      <!-- navigator start-->
+      <header class="header">
+        <div class="container">
+          <nav class="navbar navbar-expand-xxl navbar-dark bg-black fixed-top">
+            <div class="container-fluid">
+              <a href="/index.html"
+                ><img
+                  class="header__logo"
+                  src="/images/webdevclublogojusttext.svg"
+                  alt="Web Dev Club Logo"
+              /></a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasDarkNavbar"
+                aria-controls="offcanvasDarkNavbar"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div
+                class="offcanvas offcanvas-end text-bg-dark"
+                tabindex="-1"
+                id="offcanvasDarkNavbar"
+                aria-labelledby="offcanvasDarkNavbarLabel"
+              >
+                <div class="offcanvas-header">
+                  <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
+                    Web Dev Club
+                  </h5>
+                  <button
+                    type="button"
+                    class="btn-close btn-close-white"
+                    data-bs-dismiss="offcanvas"
+                    aria-label="Close"
+                  ></button>
+                </div>
+                <div class="offcanvas-body">
+                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                    </li>
+                    <li>
+                      <a class="nav-link" aria-current="page" href="./projects.html"
+                        >Projects</a
+                      >
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" href="./events.html">Events</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./contact.html">Link</a>
+                    </li>
+                    <li class="nav-item">
+                      <a
+                        class="nav-link"
+                        href="https://uvu.campusgroups.com/WDC/club_signup"
+                        >Join</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </nav>
         </div>
-        <div class="main__eventDiv"> <!--Each event will have it's own main__eventDiv, display flex so the image and text are horizontal-->
-            <!-- <figure class="main__eventFigure">
+      </header>
+      <!-- navigator end -->
+    </div>
+    <!-- main content start -->
+    <main class="main pt-5">
+      <div class="container">
+        <div class="main__titleDiv">
+          <!--Same class as contacts and events page-->
+          <h1 class="text-center">Upcoming Events</h1>
+        </div>
+        <div class="main__eventDiv">
+          <!--Each event will have it's own main__eventDiv, display flex so the image and text are horizontal-->
+          <!-- <figure class="main__eventFigure">
                 <img src="#" class="main__eventImage"> 
             </figure> -->
-            <div class="main__upcomingEvent">
-                <h2 class="main__eventTitle">Weekly Meetings ~ Every Friday</h2>
-                <h3 class="main__eventTime">5:30-6:30pm ~  <a class="main__eventAnchor" href="https://www.uvu.edu/accessibility-services/maps/cs.html" target="_blank">UVU CS404</a></h3>
-                <p class="main__eventDescription">Come join us to socialize, work on projects and talk about everything web dev related! </p>
-                <!-- <a href="#" target="_blank">more info</a> Opens up to a modal, can use bulma plugin -->
-            </div>
-            <div class="main__upcomingEvent">
-                <h2 class="main__eventTitle">Chase Adams ~ 10/28/2022</h2>
-                <h3 class="main__eventTime">6-7pm ~ <a class="main__eventAnchor" href="https://www.uvu.edu/accessibility-services/maps/cs.html" target="_blank">UVU CS404</a></h3>
-                <p class="main__eventDescription">Chase Adams is a UVU Alumni who graduated with a Bachelors degree in Marketing and then forged a career into web development. He now works at Podium as Web Developer and is coming to the Web Dev Club to speak about his journey and experience.  </p>
-                <!-- <a href="#" target="_blank">more info</a> Opens up to a modal, can use bulma plugin -->
-            </div>
+          <div class="main__upcomingEvent">
+            <h2 class="main__eventTitle">Weekly Meetings ~ Every Friday</h2>
+            <h3 class="main__eventTime">
+              5:30-6:30pm ~
+              <a
+                class="main__eventAnchor"
+                href="https://www.uvu.edu/accessibility-services/maps/cs.html"
+                target="_blank"
+                >UVU CS404</a
+              >
+            </h3>
+            <p class="main__eventDescription">
+              Come join us to socialize, work on projects and talk about everything web
+              dev related!
+            </p>
+            <!-- <a href="#" target="_blank">more info</a> Opens up to a modal, can use bulma plugin -->
+          </div>
+          <div class="main__upcomingEvent">
+            <h2 class="main__eventTitle">Chase Adams ~ 10/28/2022</h2>
+            <h3 class="main__eventTime">
+              6-7pm ~
+              <a
+                class="main__eventAnchor"
+                href="https://www.uvu.edu/accessibility-services/maps/cs.html"
+                target="_blank"
+                >UVU CS404</a
+              >
+            </h3>
+            <p class="main__eventDescription">
+              Chase Adams is a UVU Alumni who graduated with a Bachelors degree in
+              Marketing and then forged a career into web development. He now works at
+              Podium as Web Developer and is coming to the Web Dev Club to speak about his
+              journey and experience.
+            </p>
+            <!-- <a href="#" target="_blank">more info</a> Opens up to a modal, can use bulma plugin -->
+          </div>
         </div>
-        <div class="main__calendarDiv"> <!--Embed Google Calendar, will make different calendar in future-->
-            <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FDenver&src=d2ViZGV2Y2x1YnV2dUBnbWFpbC5jb20&src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%2333B679&color=%230B8043" style="border:solid 1px #777" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+        <div class="main__calendarDiv">
+          <!--Embed Google Calendar, will make different calendar in future-->
+          <iframe
+            src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FDenver&src=d2ViZGV2Y2x1YnV2dUBnbWFpbC5jb20&src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%2333B679&color=%230B8043"
+            style="border: solid 1px #777"
+            width="100%"
+            height="600"
+            frameborder="0"
+            scrolling="no"
+          ></iframe>
         </div>
         <!-- <div class="main__pastEvents">
             <h2 class="main__pastEventTitle">{ Past Events }</h2>
@@ -58,37 +172,52 @@
                 <figcaption class="main__pastEventCaption"></figcaption>
             </figure>
         </div> -->
+      </div>
     </main>
-    <div class="footer__wrapperWidth">
-        <footer class="footer">
-            <div class="footer__copyright">
-                    <figure class="footer__figureUvuLogo">
-                    <img class="footer__uvuLogo" src="/images/UVUHorizontalWhite-0011.png">
-                    </figure>
-                    <p>&copy;2022 Web Dev Club</p>
+    <!-- footer start -->
+    <footer class="pt-3 bg-black">
+      <div class="d-flex flex-column bd-highlight mb-3">
+        <!-- uvu-logo start -->
+        <div class="container">
+          <img
+            id="uvu-logo"
+            class="rounded mx-auto d-block"
+            src="/images/UVUHorizontalWhite-0011.png"
+            alt="UVU logo"
+          />
+        </div>
+        <!-- uvu-logo end -->
+        <div class="container">
+          <div class="d-flex justify-content-between">
+            <div class="p-2 bd-highlight">
+              <p class="text-light">&copy;2022 Web Dev Club</p>
             </div>
-            <div class="footer__iconsDiv">
-                <div class="footer__iconWrapper">
-                    <a href="https://www.facebook.com/webdevclubuvu" target="_blank">
-                        <i class="fa-brands fa-facebook"></i>
-                        <!-- <h3 class="footer__iconTitle">DISCORD</h3> -->
-                    </a>
-                </div>
-                <div class="footer__iconWrapper">
-                    <a href="https://discord.gg/H9f3H6mJZn" target="_blank">
-                        <i class="footer__icon fa-brands fa-discord fa-lg"></i>
-                        <!-- <h3 class="footer__iconTitle">DISCORD</h3> -->
-                    </a>
-                </div>
-                <div class="footer__iconWrapper">
-                    <a href="https://github.com/uvu-web-dev-club" target="_blank">
-                        <i class="footer__icon fa-brands fa-github fa-lg"></i>
-                        <!-- <h3 class="footer__iconTitle">GITHUB</h3> -->
-                    </a>
-                </div>
+            <!-- contact fontawesome logo -->
+            <div class="container d-flex justify-content-end">
+              <div class="footer__iconWrapper">
+                <a href="https://www.facebook.com/webdevclubuvu" target="_blank">
+                  <i class="fa-brands fa-facebook"></i>
+                  <!-- <h3 class="footer__iconTitle">DISCORD</h3> -->
+                </a>
+              </div>
+              <div class="footer__iconWrapper">
+                <a href="https://discord.gg/H9f3H6mJZn" target="_blank">
+                  <i class="footer__icon fa-brands fa-discord fa-lg"></i>
+                  <!-- <h3 class="footer__iconTitle">DISCORD</h3> -->
+                </a>
+              </div>
+              <div class="footer__iconWrapper">
+                <a href="https://github.com/uvu-web-dev-club" target="_blank">
+                  <i class="footer__icon fa-brands fa-github fa-lg"></i>
+                  <!-- <h3 class="footer__iconTitle">GITHUB</h3> -->
+                </a>
+              </div>
             </div>
-        </footer>
-    </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- footer end -->
     <script type="text/javascript" src="dist/purify.min.js"></script>
-</body>
+  </body>
 </html>
