--- a/contact.html
+++ b/contact.html
@@ -10,133 +10,206 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
+    <!--FONT AWESOME ICONS-->
     <script
       src="https://kit.fontawesome.com/dfc6ae3438.js"
       crossorigin="anonymous"
     ></script>
+    <!-- regular css -->
     <link href="/css/contact.css" rel="stylesheet" />
     <link href="/css/shared.css" rel="stylesheet" />
-    <!--FONT AWESOME ICONS-->
+
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
+    <!-- --------- -->
+
     <title>Web Dev Club</title>
   </head>
 
   <body class="body">
-    <div class="header__wrapperWidth">
-      <!--Div only for the background color so it stretches full width-->
-      <header class="header">
-        <a href="/index.html"
-          ><img
-            class="header__logo"
-            src="/images/webdevclublogojusttext.svg"
-            alt="Web Dev Club Logo"
-        /></a>
-        <!--Link back to homepage-->
-        <nav class="nav">
-          <ul class="nav__ul">
-            <li class="nav__li">
-              <a class="nav__anchor" href="/projects.html">Projects</a>
-            </li>
-            <li class="nav__li">
-              <a class="nav__anchor" href="/events.html">Events</a>
-            </li>
-            <li class="nav__li">
-              <a class="nav__anchor active" href="/contact.html">Contact</a>
-            </li>
-            <button class="nav__joinButton">
-              <a
-                class="nav__joinAnchor"
-                href="https://uvu.campusgroups.com/WDC/club_signup"
-                target="_blank"
-              >
-                JOIN</a
-              >
+    <!-- navigator start-->
+    <header class="header">
+      <div class="container">
+        <nav class="navbar navbar-expand-xxl navbar-dark bg-black fixed-top">
+          <div class="container-fluid">
+            <a href="/index.html"
+              ><img
+                class="header__logo"
+                src="/images/webdevclublogojusttext.svg"
+                alt="Web Dev Club Logo"
+            /></a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasDarkNavbar"
+              aria-controls="offcanvasDarkNavbar"
+            >
+              <span class="navbar-toggler-icon"></span>
             </button>
-          </ul>
+            <div
+              class="offcanvas offcanvas-end text-bg-dark"
+              tabindex="-1"
+              id="offcanvasDarkNavbar"
+              aria-labelledby="offcanvasDarkNavbarLabel"
+            >
+              <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
+                  Web Dev Club
+                </h5>
+                <button
+                  type="button"
+                  class="btn-close btn-close-white"
+                  data-bs-dismiss="offcanvas"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="./index.html">Home</a>
+                  </li>
+                  <li>
+                    <a class="nav-link" aria-current="page" href="./projects.html"
+                      >Projects</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./events.html">Events</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="./contact.html">Link</a>
+                  </li>
+                  <li class="nav-item">
+                    <a
+                      class="nav-link"
+                      href="https://uvu.campusgroups.com/WDC/club_signup"
+                      >Join</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </nav>
-      </header>
-    </div>
-    <main class="main">
-      <div class="main__titleDiv">
-        <!--Same class as contacts and events page-->
-        <h1>Contact</h1>
       </div>
-      <div class="main__contactDiv">
-        <div class="main__contactInfoFlex">
-          <p class="main__contactItem">
-            Please email us with any questions or inquiries! The Web Dev Club
-            would love to partner with outside organizations and industry
-            professionals. <br /><br />
-           <a href="mailto:webdevclubuvu@gmail.com">webdevclubuvu@gmail.com</a>
-          </p>
-          <div class="main__iconsDiv">
-            <div class="main__iconWrapper">
-              <a href="https://www.facebook.com/webdevclubuvu" target="_blank">
-                <i class="fa-brands fa-facebook"></i>
-                <!-- <h3 class="footer__iconTitle">DISCORD</h3> -->
-              </a>
-            </div>
-            <div class="main__iconWrapper">
-              <a href="https://discord.gg/H9f3H6mJZn" target="_blank">
-                <i class="footer__icon fa-brands fa-discord fa-lg"></i>
-                <!-- <h3 class="footer__iconTitle">DISCORD</h3> -->
-              </a>
-            </div>
-            <div class="main__iconWrapper">
-              <a href="https://github.com/uvu-web-dev-club" target="_blank">
-                <i class="footer__icon fa-brands fa-github fa-lg"></i>
-                <!-- <h3 class="footer__iconTitle">GITHUB</h3> -->
-              </a>
+    </header>
+    <!-- navigator end -->
+
+    <!-- content start -->
+    <div class="container">
+      <main class="main">
+        <div class="container pt-3">
+          <div class="main__titleDiv">
+            <!--Same class as contacts and events page-->
+            <h1 class="pt-5 text-center">Contact</h1>
+          </div>
+          <div class="container">
+            <div class="main__contactDiv">
+              <div class="main__contactInfoFlex">
+                <p class="main__contactItem">
+                  Please email us with any questions or inquiries! The Web Dev Club would
+                  love to partner with outside organizations and industry professionals.
+                  <br /><br />
+                  <a href="mailto:webdevclubuvu@gmail.com">webdevclubuvu@gmail.com</a>
+                </p>
+                <div class="main__iconsDiv">
+                  <div class="main__iconWrapper">
+                    <a href="https://www.facebook.com/webdevclubuvu" target="_blank">
+                      <i class="fa-brands fa-facebook"></i>
+                      <!-- <h3 class="footer__iconTitle">DISCORD</h3> -->
+                    </a>
+                  </div>
+                  <div class="main__iconWrapper">
+                    <a href="https://discord.gg/H9f3H6mJZn" target="_blank">
+                      <i class="footer__icon fa-brands fa-discord fa-lg"></i>
+                      <!-- <h3 class="footer__iconTitle">DISCORD</h3> -->
+                    </a>
+                  </div>
+                  <div class="main__iconWrapper">
+                    <a href="https://github.com/uvu-web-dev-club" target="_blank">
+                      <i class="footer__icon fa-brands fa-github fa-lg"></i>
+                      <!-- <h3 class="footer__iconTitle">GITHUB</h3> -->
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div></div>
+              <div class="main__councilDiv">
+                <h2 class="main__councilH2">Council Members</h2>
+                <div class="main__councilDivInfo">
+                  webdevclub(council) { <br />
+                  &nbsp;&nbsp;&nbsp;council.president = "Jordan Perry"; <br />
+                  &nbsp;&nbsp;&nbsp;council.vicepresident = "Kayla Macias-Rivera"; <br />
+                  &nbsp;&nbsp;&nbsp;council.secretary = "Richard Foy"; <br />
+                  &nbsp;&nbsp;&nbsp;council.treasurer = "Thomas Griffiths";<br />
+                  &nbsp;&nbsp;&nbsp;council.clubrepresentative = "Hannah Armstrong";<br />
+                  }
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div></div>
-        <div class="main__councilDiv">
-          <h2 class="main__councilH2">Council Members</h2>
-          <div class="main__councilDivInfo">
-            webdevclub(council) { <br />
-            &nbsp;&nbsp;&nbsp;council.president = "Jordan Perry"; <br />
-            &nbsp;&nbsp;&nbsp;council.vicepresident = "Kayla Macias-Rivera"; <br />
-            &nbsp;&nbsp;&nbsp;council.secretary = "Richard Foy"; <br />
-            &nbsp;&nbsp;&nbsp;council.treasurer = "Thomas Griffiths";<br />
-            &nbsp;&nbsp;&nbsp;council.clubrepresentative = "Hannah Armstrong";<br />
-            }
+      </main>
+    </div>
+
+    <!-- content start -->
+    <!-- footer start -->
+    <footer class="bg-black">
+      <div class="d-flex flex-column bd-highlight">
+        <!-- uvu-logo start -->
+        <div class="container">
+          <img
+            id="uvu-logo"
+            class="rounded mx-auto d-block"
+            src="/images/UVUHorizontalWhite-0011.png"
+            alt="UVU logo"
+          />
+        </div>
+        <!-- uvu-logo end -->
+        <div class="container">
+          <div class="d-flex justify-content-between">
+            <div class="bd-highlight">
+              <p class="text-light">&copy;2022 Web Dev Club</p>
+            </div>
+            <!-- contact fontawesome logo -->
+            <div class="container d-flex justify-content-end">
+              <div class="footer__iconWrapper">
+                <a href="https://www.facebook.com/webdevclubuvu" target="_blank">
+                  <i class="fa-brands fa-facebook"></i>
+                  <!-- <h3 class="footer__iconTitle">DISCORD</h3> -->
+                </a>
+              </div>
+              <div class="footer__iconWrapper">
+                <a href="https://discord.gg/H9f3H6mJZn" target="_blank">
+                  <i class="footer__icon fa-brands fa-discord fa-lg"></i>
+                  <!-- <h3 class="footer__iconTitle">DISCORD</h3> -->
+                </a>
+              </div>
+              <div class="footer__iconWrapper">
+                <a href="https://github.com/uvu-web-dev-club" target="_blank">
+                  <i class="footer__icon fa-brands fa-github fa-lg"></i>
+                  <!-- <h3 class="footer__iconTitle">GITHUB</h3> -->
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </main>
-    <div class="footer__wrapperWidth">
-      <footer class="footer">
-        <div class="footer__copyright">
-          <figure class="footer__figureUvuLogo">
-            <img
-              class="footer__uvuLogo"
-              src="/images/UVUHorizontalWhite-0011.png"
-            />
-          </figure>
-          <p>&copy;2022 Web Dev Club</p>
-        </div>
-        <div class="footer__iconsDiv">
-          <div class="footer__iconWrapper">
-            <a href="https://www.facebook.com/webdevclubuvu" target="_blank">
-              <i class="fa-brands fa-facebook"></i>
-              <!-- <h3 class="footer__iconTitle">DISCORD</h3> -->
-            </a>
-          </div>
-          <div class="footer__iconWrapper">
-            <a href="https://discord.gg/H9f3H6mJZn" target="_blank">
-              <i class="footer__icon fa-brands fa-discord fa-lg"></i>
-              <!-- <h3 class="footer__iconTitle">DISCORD</h3> -->
-            </a>
-          </div>
-          <div class="footer__iconWrapper">
-            <a href="https://github.com/uvu-web-dev-club" target="_blank">
-              <i class="footer__icon fa-brands fa-github fa-lg"></i>
-              <!-- <h3 class="footer__iconTitle">GITHUB</h3> -->
-            </a>
-          </div>
-        </div>
-      </footer>
-    </div>
+    </footer>
+    <!-- footer end -->
+
     <script type="text/javascript" src="dist/purify.min.js"></script>
   </body>
 </html>
